# site

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
assets/: WRITING_PREFIX.html  WRITING_SUFFIX.html  index.html  page.html  styles.css
data/: index.html
examples/: README.md  images.rs  map.rs
geospatial/: index.html
geospatial/data/donnelly_20220310/: summary.json
geospatial/data/mashapaug_20220310/: summary.json
geospatial/martin/: README.md  config.yaml  convert_to_mbtiles.sh  martin.service
geospatial/templates/: map.html  map.js  map_image.js  map_template.html
pages/: index.html  styles.css  writing.html
pages/writing/: a_second_test.html  about.html  pinephone.html  test.html  witcher_2.html
sandbox/: alpine.html  index.html  maps.html  tiles.html
src/: main.rs  maplibre.rs
static/: index.html  maps.html  styles.css  writing.html
static/writing/: 2021-06-19_dive_log.html  2021-06-21_dive_log.html  about.html  pinephone.html  witcher_2.html
static_pages/: index.html  writing.html
static_pages/writing/: pinephone.html  witcher_2.html
wasm/basic/: Cargo.toml  index.html
wasm/basic/src/: lib.rs
wasm_pages/basic/src/: lib.rs
writing/: 2021-06-19_dive_log.md  2021-06-21_dive_log.md  about.md  adventures_in_photogrammetry.md  index.html  nix_and_gh_actions.md  pinephone.md  setting_up_backups.md  subdomains_and_nginx.md  switching_to_alacritty.md  tech_im_excited_about.md  tracking_down_a_detached_network_session.md  transitioning_to_systemd.md  witcher_2.md
