[package]
name = "site"
version = "0.3.0"
authors = ["Christopher Moran <christopher.and.moran@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
comrak = "0.12"
# Geospatial dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
aho-corasick = "0.7"
geojson =" 0.22"
