[package]
name = "rust_leaflet_map"
version = "0.1.0"
authors = ["Chris M"]
license = "MIT"
description = "An example using leaflet-rs"
homepage = "https://github.com/kartevonmorgen/leaflet-rs"
repository = "https://github.com/kartevonmorgen/leaflet-rs"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
leaflet = "0.1"

geojson = "0.22"
serde_json = "1.0"
geo = "0.18"

gloo-events = "0.1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlAnchorElement", "Window"] }
